# backend-sura-pre

./: .dockerignore  .env.example  .env.hostinger.example  .gitignore  README.md  blansole-system-design.md  eslint.config.cjs  jest.config.cjs  nest-cli.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  test-deployment.js  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  package.json  tsconfig.app.json
apps/api/src/: app.module.ts  health-check.controller.spec.ts  main.ts  (+1 more)
apps/worker-ai/: Dockerfile  pyproject.toml
apps/worker-ai/src/: main.py  worker.py
apps/worker-ai/src/blansole_worker_ai/: __init__.py  database.py  main.py  worker.py
apps/worker-episode-summary/: Dockerfile  package.json  tsconfig.app.json
apps/worker-health-sync/: Dockerfile  package.json  tsconfig.app.json
apps/worker-link-checker/: Dockerfile  package.json  tsconfig.app.json
apps/worker-notification/: Dockerfile  package.json  tsconfig.app.json
apps/worker-session/: Dockerfile  package.json  tsconfig.app.json
docs/: environment.md  frontend-api-contract.md  hostinger-deployment.md  production-readiness.md  work-log-2026-07-21.md
infra/: docker-compose.yml
infra/monitoring/: loki-config.yaml  prometheus.yml  promtail-config.yaml
infra/nginx/: dev.conf
libs/python/: pyproject.toml
libs/python/src/: __init__.py
libs/python/src/blansole_shared_py/: __init__.py
libs/shared/: package.json  tsconfig.lib.json
prisma/: schema.prisma
scripts/: deploy-hostinger.sh  deploy-manual.ps1  deploy-remote-hostinger.sh
(+94 files in other folders)
