[project]
name = "blansole-worker-ai"
version = "0.1.0"
description = "AI Worker for Blansole"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.7",
    "openai>=1.35.3",
    "pgvector>=0.2.5",
    "celery>=5.4.0",
    "blansole-shared-py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blansole_worker_ai"]

[tool.uv.sources]
blansole-shared-py = { workspace = true }
