[project]
name = "blansole-shared-py"
version = "0.1.0"
description = "Shared Python library for Blansole"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blansole_shared_py"]
